# one_astronaut

./: .gitignore  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac  draw.c  draw.h  events.c  events.h  main.c  one_astronaut.c  one_astronaut.h  player.c  player.h  update.c  update.h
cmake/: FindAllegro.cmake  FindChipmunk.cmake
